Fix mobile styles

--- a/src/styles/hamburger.css
+++ b/src/styles/hamburger.css
@@ -33,22 +33,12 @@
     }
     .bm-menu-wrap {
       position: fixed;
-      width: 100%;
-
-      
+      width: 100%;      
     }
     .bm-menu {
-      background: #fff;
+      background: #f4f4f4;
       padding: 2.5em 1.5em 0;
       font-size: 1em;
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 100%;
-
-        @media screen and (min-width: 767px) {
-            display: none;
-        }
     }
     .bm-morph-shape {
       fill: #373a47;
@@ -70,6 +60,6 @@
       padding: 40px;
     }
     .bm-overlay {
-      background: rgba(0; 0; 0; 0.3);
-   }
+      background: rgba(0, 0, 0, 0.3);
+    }
  
