Update single line comment

--- a/src/styles/mailchimp.scss
+++ b/src/styles/mailchimp.scss
@@ -12,7 +12,7 @@ $mailchimp-color-white: #fff;
   outline: 0;
   border-width: 2px;
   width: 390px;
-  /*padding-top: 7px;  aligns input text in element */
+  // padding-top: 7px;  aligns input text in element
   background-color: $mailchimp-color-white;
   border-radius: 30px;
   text-align: left;
