Move email input placeholder back to center

--- a/src/styles/mailchimp.scss
+++ b/src/styles/mailchimp.scss
@@ -15,7 +15,7 @@ $mailchimp-color-white: #fff;
   // padding-top: 7px;  aligns input text in element
   background-color: $mailchimp-color-white;
   border-radius: 30px;
-  text-align: left;
+  text-align: center;
   display: inline-block;
   text-transform: none;
   border-radius: 30px;
