Jank fix to center mobile menu

--- a/src/styles/hamburger.css
+++ b/src/styles/hamburger.css
@@ -1,9 +1,10 @@
 .bm-burger-button {
     position: fixed;
     width: 30px;
-    height: 25px;
-    top: 30px;
-    right: 30px;  
+    height: 24px;
+    top: 24px;
+    right: 30px;
+    margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
     .bm-burger-button, .bm-menu-wrap {
