Add hamburger menu and mobile style changes (#22)
* Add hamburger styles

* Fix mobile padding to be unscrollable

* Make navbar sticky

* Fix mobile styles

* Make footer icons bigger

* Change email input font and styling

* Change hamburger styling

* Update email input placeholder

* Update single line comment

* Fix martlet navbar size

* Move email input placeholder back to center

* Delete zlib import

* Fix styles and address review comments

* Jank fix to center mobile menu

* Fix tap highlight blue overlay

* Format code

* Fix merge

* Move footer into its own style file

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -22,3 +22,26 @@ body {
     overflow: scroll;
     overflow-x: hidden;
 }
+
+button {
+    cursor: pointer;
+    outline: none;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+@media screen and (min-width: 768px) {
+    .bm-burger-button, .bm-menu-wrap {
+        display: none;
+    }
+}
+
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: transparent;
+}
