--- a/src/styles/mailchimp.scss
+++ b/src/styles/mailchimp.scss
@@ -7,12 +7,11 @@ $mailchimp-color-white: #fff;
 #mc_embed_signup input[type="text"] {
   font-size: 14px;
   font-weight: 400;
-  line-height: 27px;
+  line-height: 32px;
   color: $mailchimp-color-grey;
   outline: 0;
   border-width: 2px;
-  width: 400px;
-  padding-top: 7px; /* aligns input text in element */
+  width: 390px;
   background-color: $mailchimp-color-white;
   border-radius: 30px;
   text-align: center;
@@ -21,21 +20,16 @@ $mailchimp-color-white: #fff;
   border-radius: 30px;
   border: 2px solid $mailchimp-color-main;
   transition: all 0.15s ease-in-out;
-
+  font-family: "Brown";
+  padding: 0 15px;
+  z-index: 1;
+  max-width: 100%;
 }
 
 #mc_embed_signup input[type="email"]:focus,
 #mc_embed_signup input[type="text"]:focus,
 #mc_embed_signup input[type="email"]:active,
 #mc_embed_signup input[type="text"]:active {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  color: $mailchimp-color-grey;
-  outline: 0;
-  border-width: 2px;
-  background-color: transparent;
-  border-radius: 30px;
   border-color: $mailchimp-color-light;
 }
 
@@ -77,23 +71,6 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
   -webkit-text-fill-color: $mailchimp-color-grey;
-}
-
-@media only screen and (max-width: 768px) {
-  #mc_embed_signup input[type="email"],
-  #mc_embed_signup input[type="email"]:focus,
-  #mc_embed_signup input[type="email"]:active {
-    font-size: 14px;
-    width: 94%;
-  }
-}
-
-@media only screen and (max-width: 425px) {
-  #mc_embed_signup input[type="email"],
-  #mc_embed_signup input[type="email"]:focus,
-  #mc_embed_signup input[type="email"]:active {
-    font-size: 11px;
-  }
 }
 
 #mc_embed_signup input.mce_inline_error {
@@ -146,4 +123,10 @@ input:-webkit-autofill:active {
 
 .mc-input-wrapper {
   position: relative;
+  text-align: left;
+
+  @media only screen and (max-width: 768px) {
+    margin: auto;
+    max-width: 390px;
+  }
 }
