Move fonts to assets folder

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: "Brown";
-    src: url("./font/Brown-Regular.ttf");
+    src: url("../assets/fonts/Brown-Regular.ttf");
 }
 
 html {
