--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@ html {
     line-height: 1.15;
     font-size: 62.5%;
     scroll-behavior: smooth;
-
+    height: 100%;
 }
 
 body {
@@ -21,6 +21,10 @@ body {
     color: #636363;
     overflow: scroll;
     overflow-x: hidden;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
 }
 
 button {
