Update link colours

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,11 +28,11 @@ body {
 }
 
 a {
-    color: #a6a6a6;
+    color: #f2463a;
 }
 
 a:hover {
-    color: #f2463a;
+    color: #f56f65;
 }
 
 button {
