Added Privacy Policy and Code of Conduct to pages (#43)
* Add privacy policy and code of conduct pages

* Fix padding for footer to be whole screen on mobile

* Change page names to match naming conventions

* Fix padding for text for mobile view

* Fix indentation

* Fix padding for mobile view

* Fix font size for headers

* Add content for privacy policy page

* Add code of conduct content

* Add mailto links

* Update change log

* Fix responsive layout

* Change link colours

* Add links to privacy policy

* Update link colours

* Remove footer links

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -27,6 +27,14 @@ body {
     flex: 1 0 auto;
 }
 
+a {
+    color: #f2463a;
+}
+
+a:hover {
+    color: #f56f65;
+}
+
 button {
     cursor: pointer;
     outline: none;
