Add sponsor info package (#61)
* update p tag font

* add bold text colour

* add sponsor info page

* update changelog

* update changelog

* add spacing

* update changelog

* update schedule

* update sponsor info copy

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -27,6 +27,14 @@ body {
     flex: 1 0 auto;
 }
 
+p {
+    font-family: Hind Siliguri, sans-serif;
+}
+
+b {
+    color: #f2463a;
+}
+
 a {
     color: #f2463a;
 }
